# moviebox-api

./: .gitignore  KNOWN_ISSUES.md  Makefile  PRE_RELEASE_CHECKLIST.md  README.md  mkdocs.yml  pyproject.toml
assets/recons/: README3.md  home.json  movie-tv-extensive-search.json  operating-list.json  popular-movies.json
assets/recons1/: COMBINED.md  anime.md  trending.json
docs/: index.md
docs/v1/: introduction.md
src/moviebox_api/: console.py
src/moviebox_api/v1/: __init__.py  constants.py  core.py  exceptions.py  helpers.py  models.py  requests.py
src/moviebox_api/v1/cli/: downloader.py  helpers.py  interface.py
src/moviebox_api/v2/: __init__.py  _bases.py  constants.py  core.py  download.py  exceptions.py  helpers.py  models.py  requests.py
src/moviebox_api/v2/cli/: interface.py
src/moviebox_api/v3/: __init__.py  _bases.py  constants.py  core.py  crypto.py  download.py  http_client.py  logger.py
src/moviebox_api/v3/cli/: downloader.py  extras.py  helpers.py  interface.py
src/moviebox_api/v3/models/: details.py  downloadables.py  homepage.py  search.py
tests/: test_progress_bar_cleanup.py
tests/diagnostics/: test_v1_bootstrap.py  test_v1_search_resolve.py  test_v2_bootstrap.py  test_v2_search_resolve.py  test_v3_bootstrap.py  test_v3_search_resolve.py
tests/v1/: __init__.py
tests/v1/cli/: test_commands.py
tests/v2/core/: test_others.py  test_search.py  test_search_sync.py  test_search_with_filters.py
tests/v3/: test_download.py  test_download_captions.py
tests/v3/cli/: test_commands.py
tests/v3/core/: test_downloadables.py  test_search.py
